# FieldDayLogger-Curses

./: .gitignore  FieldDayLogger.py  FieldDayLogger.spec  README.md  bmlog.py  cat_interface.py  cwinterface.py  database.py  edittextfield.py  fd_preferences.json  lookup.py  publish.sh  pyproject.toml  rebuild.sh  requirements.txt  server.py  settings.py  update_version.sh  version.py
fdcurses/: __main__.py
fdcurses/data/: cwmacros_fd.txt  k6gte-FieldDay.desktop
fdcurses/lib/: cat_interface.py  edittextfield.py  groupsettings.py  lookup.py  settings.py  version.py  wsjtx_listener.py
lib/: database.py  edittextfield.py  groupsettings.py  settings.py  version.py
testing/: multicast_listener.py
